--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -9,6 +9,7 @@ class="w-full  flex justify-center items-center z-10"
     <app-logo [logoClass]="fixedHeader() ? 'w-28 sm:w-40' : 'w-34 sm:w-40' "/>
 
     <app-links class="hidden lg:inline-block"
+    [links]="links()"
     linksClass="flex justify-center items-center gap-1 text-white
     xs:w-15 sm:w-22 hover:bg-mz-primary hover:rounded-t-md  md:hover:rounded-3xl py-1 
     cursor-pointer hover:text-gray-50 mx-1"
@@ -29,4 +30,6 @@ class="w-full  flex justify-center items-center z-10"
 </nav>
 </header>
 
-<app-nav-bar *ngIf="layoutHide() !== true" class="w-full  lg:hidden"/>
+<app-nav-bar *ngIf="layoutHide() !== true" class="w-full  lg:hidden"
+[links]="links()"
+/>
