--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<section class="w-full  bg-gradient-to-br from-[#131111] to-[#080808]  ">
+<section class="w-full  bg-space  ">
 
     <div class="w-full h-screen  flex justify-center items-center ">
     <app-aside [dashboardLinks]="dashboardLinks()" 
