--- a/src/styles.css
+++ b/src/styles.css
@@ -57,6 +57,9 @@
   @apply bg-[url('https://res.cloudinary.com/mohamedenara/image/upload/v1741027606/bg-space_px2q4e.jpg')]
   bg-cover bg-no-repeat
   }
+  .bg-space2 {
+  @apply  bg-gray-50
+  }
   .after-border {
   @apply  after:absolute after:bottom-0  after:w-full after:h-[1px]  ;
   }
